[gd_scene load_steps=4 format=3 uid="uid://6cj2d553cbi4"]

[ext_resource type="Script" path="res://powerup.gd" id="1_6mpt4"]
[ext_resource type="Texture2D" uid="uid://d3b5cclapi7uo" path="res://ball.png" id="1_ciuf5"]

[sub_resource type="CircleShape2D" id="CircleShape2D_toqop"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_6mpt4")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="Sprite2D" type="Sprite2D" parent="Area2D"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_ciuf5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_toqop")

[node name="destroy_timer" type="Timer" parent="."]
wait_time = 8.0
autostart = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="destroy_timer" to="." method="_on_destroy_timer_timeout"]
